--- a/applicationsets/monitoring/robusta-applicationset.yaml
+++ b/applicationsets/monitoring/robusta-applicationset.yaml
@@ -25,13 +25,13 @@ spec:
     spec:
       project: default
       sources:
-        - repoURL: git@github.com:la-cc/gitops-robusta-argocd.git
+        - repoURL: https://github.com/la-cc/gitops-robusta-argocd.git
           targetRevision: "{{values.branch}}"
           ref: valuesRepo
-        # - repoURL: git@github.com:la-cc/gitops-robusta-argocd.git
+        # - repoURL: https://github.com/la-cc/gitops-robusta-argocd.git
         #   targetRevision: "{{values.branch}}"
         #   path: "./cluster/{{name}}/monitoring/robusta/secrets"
-        - repoURL: git@github.com:la-cc/gitops-robusta-argocd.git
+        - repoURL: https://github.com/la-cc/gitops-robusta-argocd.git
           targetRevision: "{{values.branch}}"
           path: "./helm/monitoring/robusta"
           helm:
