--- a/kustomize/monitoring/grafana/dashboards/argocd.yaml
+++ b/kustomize/monitoring/grafana/dashboards/argocd.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: argocd-overview-dashboard
-  namespace: monitoring
+  namespace: robusta
   labels:
     grafana_dashboard: "1"
     dashboard-log-level: overview
