--- a/cluster/in-cluster/monitoring/robusta/secrets/grafana-admin-cred.yaml
+++ b/cluster/in-cluster/monitoring/robusta/secrets/grafana-admin-cred.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: grafana-admin-credentials
-  namespace: monitoring
+  namespace: robusta
 data:
   admin-password: cmVwbGFjZS1tZSE=
   admin-user: cmVwbGFjZS1tZSE=
